@@ -1,14 +1,15 @@
 package com.old.silence.auth.center.domain.service;
 
-import org.mapstruct.factory.Mappers;
+import java.math.BigInteger;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
+
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
-import com.old.silence.auth.center.enums.MenuType;
-import com.old.silence.core.util.CollectionUtils;
-import com.old.silence.core.util.TreeFormatUtils;
-import com.old.silence.dto.TreeDto;
 import com.old.silence.auth.center.api.assembler.MenuMapper;
 import com.old.silence.auth.center.domain.model.Menu;
 import com.old.silence.auth.center.domain.model.RoleMenu;
@@ -17,26 +18,24 @@ import com.old.silence.auth.center.domain.repository.MenuRepository;
 import com.old.silence.auth.center.domain.repository.RoleMenuRepository;
 import com.old.silence.auth.center.domain.repository.UserRoleRepository;
 import com.old.silence.auth.center.dto.MenuDto;
+import com.old.silence.auth.center.enums.MenuType;
 import com.old.silence.auth.center.infrastructure.message.AuthCenterMessages;
-
-import java.math.BigInteger;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.stream.Collectors;
+import com.old.silence.core.util.CollectionUtils;
+import com.old.silence.core.util.TreeFormatUtils;
+import com.old.silence.dto.TreeDto;
 
 @Service
 public class MenuService {
 
     private final MenuRepository menuRepository;
+    private final MenuMapper menuMapper;
     private final RoleMenuRepository roleMenuRepository;
     private final UserRoleRepository userRoleRepository;
 
-    public MenuService(MenuRepository menuRepository, RoleMenuRepository roleMenuRepository,
-                       UserRoleRepository userRoleRepository) {
+    public MenuService(MenuRepository menuRepository, MenuMapper menuMapper,
+                       RoleMenuRepository roleMenuRepository, UserRoleRepository userRoleRepository) {
         this.menuRepository = menuRepository;
+        this.menuMapper = menuMapper;
         this.roleMenuRepository = roleMenuRepository;
         this.userRoleRepository = userRoleRepository;
     }
@@ -47,7 +46,7 @@ public class MenuService {
 
     public List<TreeDto> getMenuTree() {
         // 获取所有菜单列表
-        List<Menu> menus = menuRepository.findAllByDeleted(false);
+        List<Menu> menus = menuRepository.findAllByDeletedAndStatus(false, true);
         var treeDTOS = CollectionUtils.transformToList(menus, node -> new TreeDto(node.getId(), node.getName(), node.getParentId()));
 
 
@@ -57,20 +56,20 @@ public class MenuService {
 
     public List<MenuDto> getMenuList() {
         // 获取所有菜单列表
-        var menus = menuRepository.findAllByDeleted(false);
+        var menus = menuRepository.findAllByDeletedAndStatusAndTypeIn(false, true, List.of(MenuType.CONTENTS, MenuType.MENU));
         // 转换为树形结构
         return buildMenuTree(menus);
     }
 
     public Menu findById(BigInteger id) {
         Menu menu = menuRepository.findById(id);
-        if (menu == null || menu.getDeleted() ) {
+        if (menu == null || menu.getDeleted()) {
             throw AuthCenterMessages.MENU_NOT_EXIST.createException("菜单不存在");
         }
         return menu;
     }
 
-    
+
     @Transactional(rollbackFor = Exception.class)
     public BigInteger create(Menu menu) {
         // 创建菜单
@@ -79,12 +78,12 @@ public class MenuService {
         return menu.getId();
     }
 
-    
+
     @Transactional(rollbackFor = Exception.class)
     public void update(Menu menu) {
         // 检查菜单是否存在
         Menu existingMenu = menuRepository.findById(menu.getId());
-        if (existingMenu == null || existingMenu.getDeleted() ) {
+        if (existingMenu == null || existingMenu.getDeleted()) {
             throw AuthCenterMessages.MENU_NOT_EXIST.createException("菜单不存在");
         }
 
@@ -92,14 +91,14 @@ public class MenuService {
         menuRepository.update(menu);
     }
 
-    
+
     @Transactional(rollbackFor = Exception.class)
     public void delete(BigInteger id) {
 
         menuRepository.delete(id);
         // 检查菜单是否存在
         Menu menu = menuRepository.findById(id);
-        if (menu == null || menu.getDeleted() ) {
+        if (menu == null || menu.getDeleted()) {
             throw AuthCenterMessages.MENU_NOT_EXIST.createException();
         }
 
@@ -118,7 +117,7 @@ public class MenuService {
     public void updateMenuStatus(BigInteger id, Boolean status) {
         // 检查菜单是否存在
         Menu menu = menuRepository.findById(id);
-        if (menu == null || menu.getDeleted() ) {
+        if (menu == null || menu.getDeleted()) {
             throw AuthCenterMessages.MENU_NOT_EXIST.createException();
         }
 
@@ -127,27 +126,29 @@ public class MenuService {
         menuRepository.update(menu);
     }
 
-    
+
     public List<MenuDto> getCurrentUserMenuTree(BigInteger userId) {
-        var menus =  getCurrentUserMenus(userId);
+        var menus = getCurrentUserMenus(userId);
         return buildMenuTree(menus);
     }
 
-    
+
     public List<Menu> getCurrentUserMenus(BigInteger userId) {
 
         List<Menu> menus;
         //如果是超管，返回所有资源
         if (BigInteger.ONE.compareTo(userId) == 0) {
-            menus = menuRepository.findAllByDeleted(false)
-                    .stream().filter(menu -> Set.of(MenuType.CONTENTS, MenuType.MENU).contains(menu.getType()) && menu.getStatus())
-                    .collect(Collectors.toList());
+            menus = menuRepository.findAllByDeletedAndStatus(false, true);
         } else {
             // 获取用户角色ID列表
             List<BigInteger> roleIds = userRoleRepository.findByUserId(userId)
                     .stream()
                     .map(UserRole::getRoleId)
                     .collect(Collectors.toList());
+
+            if (CollectionUtils.isEmpty(roleIds)) {
+                return List.of();
+            }
 
             // 获取角色菜单ID列表
             List<BigInteger> menuIds = roleMenuRepository.findByRoleIdIn(roleIds)
@@ -159,7 +160,7 @@ public class MenuService {
             }
 
             // 获取权限标识列表
-            menus = menuRepository.findByIdInAndDeletedAndTypeInAndStatus(menuIds, false, List.of(MenuType.CONTENTS, MenuType.MENU), true);
+            menus = menuRepository.findByIdInAndDeletedAndStatus(menuIds, false, true);
 
         }
         return menus;
@@ -169,8 +170,7 @@ public class MenuService {
 
 
     private List<MenuDto> buildMenuTree(List<Menu> menus) {
-        var menuMapper = Mappers.getMapper(MenuMapper.class);
-        var menuDtos = menus.stream().map(menuMapper::convertToDto).collect(Collectors.toList());
+        var menuDtos = menus.stream().map(menuMapper::convertToDto).toList();
         // 构建父子关系
         Map<BigInteger, List<MenuDto>> parentMap = menuDtos.stream()
                 .collect(Collectors.groupingBy(MenuDto::getParentId));
@@ -181,7 +181,6 @@ public class MenuService {
         // 返回顶层菜单
         return parentMap.getOrDefault(BigInteger.ZERO, new ArrayList<>());
     }
-
 
 
 }
