@@ -8,13 +8,14 @@ import com.baomidou.mybatisplus.core.conditions.update.UpdateWrapper;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.old.silence.auth.center.domain.model.User;
 import com.old.silence.auth.center.domain.model.UserRole;
+import com.old.silence.auth.center.domain.repository.UserRepository;
+import com.old.silence.auth.center.domain.repository.UserRoleRepository;
 import com.old.silence.auth.center.infrastructure.message.AuthCenterMessages;
-import com.old.silence.auth.center.infrastructure.persistence.dao.UserDao;
-import com.old.silence.auth.center.infrastructure.persistence.dao.UserRoleDao;
 import com.old.silence.auth.center.util.PasswordUtil;
 import com.old.silence.core.util.CollectionUtils;
 
 import java.math.BigInteger;
+import java.time.Instant;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -22,26 +23,26 @@ import java.util.stream.Collectors;
 @Service
 public class UserService {
 
-    private final UserDao userDao;
-    private final UserRoleDao userRoleDao;
+    private final UserRepository userRepository;
+    private final UserRoleRepository userRoleRepository;
     private final PasswordUtil passwordUtil;
 
-    public UserService(UserDao userDao, UserRoleDao userRoleDao,
+    public UserService(UserRepository userRepository, UserRoleRepository userRoleRepository,
                        PasswordUtil passwordUtil) {
-        this.userDao = userDao;
-        this.userRoleDao = userRoleDao;
+        this.userRepository = userRepository;
+        this.userRoleRepository = userRoleRepository;
         this.passwordUtil = passwordUtil;
     }
 
     public Page<User> query(Page<User> page, QueryWrapper<User> queryWrapper) {
-        var userPage = userDao.selectPage(page, queryWrapper);
+        var userPage = userRepository.queryPage(page, queryWrapper);
 
         var userIds = userPage.getRecords()
                 .stream().map(User::getId).collect(Collectors.toList());
         if (CollectionUtils.isEmpty(userIds)) {
             return userPage;
         }
-        var userRoles = userRoleDao.findByUserIdIn(userIds);
+        var userRoles = userRoleRepository.findByUserIdIn(userIds);
         var groupingByUserIdRoleIdsMap = userRoles.stream()
                 .collect(Collectors.groupingBy(UserRole::getUserId, Collectors.mapping(
                         UserRole::getRoleId,
@@ -53,12 +54,12 @@ public class UserService {
         return userPage;
     }
 
-    
+
     public User findById(BigInteger id) {
-        return userDao.selectById(id);
+        return userRepository.findById(id);
     }
 
-    
+
     @Transactional(rollbackFor = Exception.class)
     public BigInteger create(User user) {
         // 密码强度验证
@@ -66,7 +67,7 @@ public class UserService {
 
         String encodedPassword = passwordUtil.encodePassword(user.getPassword());
         user.setPassword(encodedPassword);
-        userDao.insert(user);
+        userRepository.create(user);
         // 分配角色
         if (user.getRoleIds() != null && !user.getRoleIds().isEmpty()) {
             assignUserRoles(user.getId(), user.getRoleIds());
@@ -74,6 +75,18 @@ public class UserService {
 
         return user.getId();
     }
+
+    public BigInteger register(User user) {
+        String encodedPassword = passwordUtil.encodePassword(user.getPassword());
+        user.setPassword(encodedPassword);
+        user.setFirstLogin(true);
+        user.setForceChangePassword(true);
+
+        userRepository.create(user);
+
+        return user.getId();
+    }
+
 
     /**
      * 密码强度验证
@@ -95,10 +108,10 @@ public class UserService {
     @Transactional(rollbackFor = Exception.class)
     public void update(User user) {
         // 检查用户是否存在
-        User existingUser = userDao.selectById(user.getId());
+        User existingUser = userRepository.findById(user.getId());
         // 更新用户信息
         user.setPassword(existingUser.getPassword()); // 保持原密码不变
-        userDao.updateById(user);
+        userRepository.update(user);
 
         // 更新角色
         if (user.getRoleIds() != null) {
@@ -107,46 +120,58 @@ public class UserService {
     }
 
 
+    public void modifyPassword(String username, String newPassword) {
+        var user = userRepository.findByUsernameAndStatus(username, Boolean.TRUE);
+        if (user == null) {
+            throw AuthCenterMessages.USER_NOT_EXIST.createException(username);
+        }
+        userRepository.updatePassword(user.getId(), newPassword);
+    }
+
+
     @Transactional(rollbackFor = Exception.class)
     public void delete(BigInteger id) {
-        userDao.deleteById(id);
+        userRepository.delete(id);
 
         // 删除用户角色关联
-        userRoleDao.delete(new LambdaQueryWrapper<UserRole>()
-                .eq(UserRole::getUserId, id));
+        userRoleRepository.deleteByUserId(id);
     }
 
-    
+
     public void updateUserStatus(BigInteger id, Boolean status) {
-        userDao.update(new UpdateWrapper<User>().lambda().set(User::getStatus, status)
-                .eq(User::getId, id));
+        userRepository.updateStatus(status, id);
     }
 
-    
+
     public void resetPassword(BigInteger id, String password) {
 
         validatePasswordStrength(password);
         // 更新密码
         var newPassword = passwordUtil.encodePassword(password);
-        userDao.update(new UpdateWrapper<User>().lambda().set(User::getPassword, newPassword)
-                .eq(User::getId, id));
+
+        var updateWrapper = new UpdateWrapper<User>().lambda()
+                .set(User::getPassword, newPassword)
+                .set(User::getFirstLogin, false)
+                .set(User::getForceChangePassword, false)
+                .set(User::getPasswordChangedTime, Instant.now())
+                .eq(User::getId, id);
+        userRepository.update(updateWrapper);
     }
 
-    
+
     public List<BigInteger> getUserRoleIds(BigInteger userId) {
-        return userRoleDao.selectList(new LambdaQueryWrapper<UserRole>()
-                .eq(UserRole::getUserId, userId))
+        return userRoleRepository.selectList(new LambdaQueryWrapper<UserRole>()
+                        .eq(UserRole::getUserId, userId))
                 .stream()
                 .map(UserRole::getRoleId)
                 .collect(Collectors.toList());
     }
 
-    
+
     @Transactional(rollbackFor = Exception.class)
     public void assignUserRoles(BigInteger userId, Set<BigInteger> roleIds) {
         // 删除原有角色
-        userRoleDao.delete(new LambdaQueryWrapper<UserRole>()
-                .eq(UserRole::getUserId, userId));
+        userRoleRepository.deleteByUserId(userId);
 
         // 分配新角色
         if (roleIds != null && !roleIds.isEmpty()) {
@@ -157,12 +182,17 @@ public class UserService {
                         userRole.setRoleId(roleId);
                         return userRole;
                     })
-                    .collect(Collectors.toList());
-            userRoles.forEach(userRoleDao::insert);
+                    .toList();
+            userRoleRepository.bulkCreate(userRoles);
         }
     }
 
     public boolean existsByUsername(String username) {
-        return userDao.existsByUsername(username);
+        QueryWrapper<User> queryWrapper = new QueryWrapper<>();
+        queryWrapper.lambda().eq(User::getUsername, username)
+                .eq(User::getStatus, true);
+        return userRepository.findByCriteria(queryWrapper) != null;
     }
+
+
 }
